# gordo

./: .baseline.txt  .codecov.yml  .dockerignore  .gitignore  .pyup.yml  .readthedocs.yml  .travis.yml  .trivyignore  CHANGELOG.md  Dockerfile  Dockerfile-Client  Dockerfile-GordoDeploy  Dockerfile-ModelBuilder  Dockerfile-ModelServer  Dockerfile-Watchman  Dockerfile-argo  Makefile  README.md  SECURITY.md  azure-pipelines.yml  build.sh  debug_call.sh  dev_requirements.in  dev_requirements.txt  docker_push.sh  functions.sh  install_python.sh  model.pkl  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  run_workflow_and_argo.sh  setup.cfg  setup.py  test_requirements.in  test_requirements.txt
.chglog/: config.yml
.circleci/: config.yml
.github/: dependabot.yml  dependabot.yml 
.gordo_env/: pyvenv.cfg
benchmarks/: README.md  test_ml_server.py
ci/: github_docker.sh  trivy_scan.sh
deployer/: Cargo.toml
deployer/src/: main.rs
docs/: Makefile  architecture_diagram.py  conf.py  index.rst  overview.rst
examples/: Gordo-Reporters-MlFlow.ipynb  Gordo-Workflow-High-Level.ipynb  Gordo-Workflow-Semi-Low-Level.ipynb  Pipelines-with-Gordo.ipynb  TestFail.ipynb  config.yaml  config_crd.yaml  config_legacy.yaml  example-config.yaml  ioc_config_example.csv  metadata.json  model-configuration.yaml  test-project.yaml
gordo/: __init__.py  base.py  dependencies.py  utils.py
gordo_components/: __init__.py  cli.py  dataset.py  model.py
gordo_flow/: cli.py  dataset.py
k8s/: kustomization.yaml
requirements/: core_requirements.in  docs_requirements.in  (+12 more)
(+564 files in other folders)
