[package]
name = "deployer"
version = "0.1.0"
authors = ["Miles Granger <miles59923@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.15.0", features = ["openapi"] }
k8s-openapi = { version = "0.5.0", features = ["v1_15"] }
log = "0.4.8"
failure = "0.1.5"
env_logger = "0.6.2"
